--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-     "start": "node server.js"
+    "start": "node server.js",
+    "server": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
