--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=https://reactproject-2025-production.up.railway.app
+REACT_APP_API_URL=https://reactproject-2025-production.up.railway.app/api/jobs
