--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-VITE_API_URL=https://reactproject-2025-production.up.railway.app/api/jobs
+VITE_API_URL=https://reactproject-2025-production.up.railway.app/api
